# Makefile.am for vegastrike/data

pkgdatadir = $(prefix)/games/@PACKAGE@/data

#pkgdata_DATA = $(wildcard *)

pkgdata_DATA = \
./9x12.alp \
./9x12.bmp \
./9x12.font \
./Capskn3.bmp \
./Capwin~2.bmp \
./Dralthi.bmp \
./Dumbfire.xunit \
./Dumbfire.xunit.xai \
./Planetary-Ring.xmesh \
./Planetary-Ring.xunit \
./Planetary-Ring.xunit.bsp \
./Planetary-Ring.xunit_shield.bsp \
./Rapier.bmp \
./TerranPriA.bmp \
./TerranPriA128.bmp \
./TerranPriRGB.bmp \
./TerranSecA.bmp \
./TerranSecRGB.bmp \
./afterburn-turntowards-itts.xml \
./afterburn-turntowards.xml \
./afterburnerslide.xml \
./aitest.xml \
./armorf.bmp \
./armorf.spr \
./armorl.alp \
./armorl.bmp \
./armorl.spr \
./auto.alp \
./auto.bmp \
./auto.spr \
./beamtexture.bmp \
./blasterpower.alp \
./blasterpower.bmp \
./blasterpower.spr \
./bolt.bmp \
./crosshairs.alp \
./crosshairs.bmp \
./crosshairs.spr \
./cube_light.bmp \
./cube_sphere.bmp \
./default.agg.xml \
./default.int.xml \
./default.final.xml \
./default.scared.xml \
./default.test.xml \
./defaultscared1.xml \
./disabled-cockpit.cpt \
./dralthi.xmesh \
./dralthi.xunit \
./dralthi.xunit.bsp \
./drydock-Cube_27-Material.xmesh \
./drydock-Cube_27-Material1.xmesh \
./drydock-Cube_27.xunit \
./drydock-Cube_27.xunit.bsp \
./dumbfire.xmesh \
./earth.bmp \
./eject.alp \
./eject.bmp \
./eject.spr \
./evade.xml \
./explode_orange0.alp \
./explode_orange0.bmp \
./explode_orange1.alp \
./explode_orange1.bmp \
./explode_orange10.alp \
./explode_orange10.bmp \
./explode_orange11.alp \
./explode_orange11.bmp \
./explode_orange12.alp \
./explode_orange12.bmp \
./explode_orange13.alp \
./explode_orange13.bmp \
./explode_orange14.alp \
./explode_orange14.bmp \
./explode_orange15.alp \
./explode_orange15.bmp \
./explode_orange16.alp \
./explode_orange16.bmp \
./explode_orange17.alp \
./explode_orange17.bmp \
./explode_orange18.alp \
./explode_orange18.bmp \
./explode_orange2.alp \
./explode_orange2.bmp \
./explode_orange3.alp \
./explode_orange3.bmp \
./explode_orange4.alp \
./explode_orange4.bmp \
./explode_orange5.alp \
./explode_orange5.bmp \
./explode_orange6.alp \
./explode_orange6.bmp \
./explode_orange7.alp \
./explode_orange7.bmp \
./explode_orange8.alp \
./explode_orange8.bmp \
./explode_orange9.alp \
./explode_orange9.bmp \
./explode_sml_orange0.alp \
./explode_sml_orange0.bmp \
./explode_sml_orange1.alp \
./explode_sml_orange1.bmp \
./explode_sml_orange10.alp \
./explode_sml_orange10.bmp \
./explode_sml_orange11.alp \
./explode_sml_orange11.bmp \
./explode_sml_orange12.alp \
./explode_sml_orange12.bmp \
./explode_sml_orange13.alp \
./explode_sml_orange13.bmp \
./explode_sml_orange14.alp \
./explode_sml_orange14.bmp \
./mars.bmp \
./explosion_orange.ani \
./explode_sml_orange15.alp \
./explode_sml_orange15.bmp \
./explode_sml_orange16.alp \
./explode_sml_orange16.bmp \
./explode_sml_orange17.alp \
./explode_sml_orange17.bmp \
./explode_sml_orange18.alp \
./explode_sml_orange18.bmp \
./explode_sml_orange19.alp \
./explode_sml_orange19.bmp \
./explode_sml_orange2.alp \
./explode_sml_orange2.bmp \
./explode_sml_orange3.alp \
./explode_sml_orange3.bmp \
./explode_sml_orange4.alp \
./explode_sml_orange4.bmp \
./explode_sml_orange5.alp \
./explode_sml_orange5.bmp \
./explode_sml_orange6.alp \
./explode_sml_orange6.bmp \
./explode_sml_orange7.alp \
./explode_sml_orange7.bmp \
./explode_sml_orange8.alp \
./explode_sml_orange8.bmp \
./explode_sml_orange9.alp \
./explode_sml_orange9.bmp \
./explosion_sml_orange.ani \
./factions.xml \
./fuelstat.alp \
./fuelstat.bmp \
./fuelstat.spr \
./glsetup.txt \
./hellcat.bmp \
./hellcat.xmesh \
./moon.bmp \
./hellcat.xunit \
./hellcat.xunit.bak \
./hellcat.xunit.bsp \
./hornet-cockpit.cpt \
./hornet-cockpit.jpg \
./hornet-cockpit.spr \
./hornet.xmesh \
./hornetLOD.xmesh \
./hornetPYR.xmesh \
./hornet.bmp \
./hornet.xunit \
./jalthi.bmp \
./jalthi.xmesh \
./jalthi.xunit \
./jalthi.xunit.bsp \
./jupiter.bmp \
./kickstop.xml \
./locationselect.alp \
./locationselect.ani \
./locationselect.bmp \
./locationselect_up.alp \
./locationselect_up.ani \
./locationselect_up.bmp \
./massdrivertexture.bmp \
./mercury.bmp \
./mouse.alp \
./mouse.bmp \
./mouse.spr \
./neptune.bmp \
./neutrontexture.bmp \
./particletexture.bmp \
./pluto.bmp \
./radar.alp \
./radar.bmp \
./radar.spr \
./rapier.xmesh \
./rapierPYR.xmesh \
./rapier.xunit \
./saturn-ring.alp \
./saturn-ring.bmp \
./saturn.bmp \
./selectbox.bmp \
./selectbox.spr \
./shelton-slide.xml \
./shield.bmp \
./shieldf.alp \
./shieldf.bmp \
./shieldf.spr \
./skilledabslide.xml \
./sun.bmp \
./supernova.bmp \
./test.xml \
./testmission.txt \
./turnaway.xml \
./turntowards.xml \
./turntowardsitts.xml \
./uranus.bmp \
./Makefile.am \
./venus.bmp \
./weapon_list.xml \
./rapier.xunit.bsp \
./hornet-cockpit.bmp \
./hornet-cockpitalp.bmp \
./hornet-top.alp \
./hornet-top.bmp \
./hornet-top.spr \
./test1.mission


EXTRA_DIST = $(pkgdata_DATA)

