bindir = $(prefix)/games/vegastrike/data

bin_PROGRAMS = select

select_SOURCES =				\
	button.cpp		\
	button.h		\
	easydom.cpp		\
	easydom.h		\
	file.cpp		\
	file.h			\
	general.cpp		\
	general.h		\
	glut_support.cpp	\
	glut_support.h		\
	graphics.cpp		\
	graphics.h		\
	hashtable.cpp		\
	hashtable.h		\
	select.cpp		\
	selector.cpp		\
	selector.h		\
	text_area.cpp		\
	text_area.h		\
	xml_support.cpp		\
	xml_support.h
