add_definitions(-DBOOST_PYTHON_NO_PY_SIGNATURES -DBOOST_PYTHON_STATIC_LIB)
include_directories("${vsUTCS_SOURCE_DIR}/boost/1_53")
add_library(boost_python
  src/converter/arg_to_python_base.cpp
  src/converter/builtin_converters.cpp
  src/converter/from_python.cpp
  src/converter/registry.cpp
  src/converter/type_id.cpp
  src/dict.cpp
  src/errors.cpp
  src/exec.cpp
  src/import.cpp
  src/list.cpp
  src/long.cpp
  src/module.cpp
  src/numeric.cpp
  src/object/class.cpp
  src/object/enum.cpp
  src/object/function.cpp
  src/object/function_doc_signature.cpp
  src/object/inheritance.cpp
  src/object/iterator.cpp
  src/object/life_support.cpp
  src/object/pickle_support.cpp
  src/object/stl_iterator.cpp
  src/object_operators.cpp
  src/object_protocol.cpp
  src/slice.cpp
  src/str.cpp
  src/tuple.cpp
  src/wrapper.cpp)
