# Makefile.am for vegastrike/data
pkgdatadir = $(prefix)/games/@PACKAGE@/data/sounds/

#pkgdata_DATA = $(wildcard *)

pkgdata_DATA = \
sfx00.wav sfx01.wav sfx02.wav sfx03.wav sfx04.wav sfx05.wav sfx06.wav sfx07.wav sfx08.wav sfx09.wav sfx10.wav sfx11.wav sfx12.wav sfx13.wav sfx14.wav sfx15.wav sfx16.wav sfx17.wav sfx18.wav sfx19.wav sfx20.wav sfx21.wav sfx22.wav sfx23.wav sfx24.wav sfx25.wav sfx26.wav sfx27.wav sfx28.wav sfx29.wav sfx30.wav sfx31.wav sfx32.wav sfx33.wav sfx34.wav sfx35.wav sfx36.wav sfx37.wav sfx38.wav sfx39.wav sfx40.wav sfx41.wav sfx42.wav sfx43.wav sfx44.wav sfx45.wav sfx46.wav sfx47.wav sfx48.wav sfx49.wav sfx50.wav sfx51.wav sfx52.wav sfx53.wav sfx54.wav sfx98.wav sfx99.wav
EXTRA_DIST = $(pkgdata_DATA)

