# Makefile.am for vegastrike/data
SUBDIRS = ai animations disabled-cockpit.cpt hornet-cockpit.cpt meshes sounds sprites textures units
pkgdatadir = $(prefix)/games/@PACKAGE@/data

#pkgdata_DATA = $(wildcard *)

pkgdata_DATA = \
9x12.alp \
9x12.font \
battle.m3u \
bolt.wav \
cube_light.bmp \
cube_sphere.bmp \
factions.xml \
panic.m3u \
peace.m3u \
test1.mission \
testmission.txt \
testworks.xml \
test.xml \
vegastrike.config \
weapon_list.xml

EXTRA_DIST = $(pkgdata_DATA)

